--- a/source/index.html
+++ b/source/index.html
@@ -39,17 +39,17 @@
               </a>
             </li>
             <li class="nav__item">
-              <a class="nav__link" href="">
+              <a class="nav__link" href="photo.html">
                 Фотографии
               </a>
             </li>
             <li class="nav__item">
-              <a class="nav__link" href="">
+              <a class="nav__link" href="form.html">
                 Конкурс
               </a>
             </li>
             <li class="nav__item">
-              <a class="nav__link" href="">
+              <a class="nav__link" href="https://htmlacademy.ru/intensive/adaptive">
                 HTML Academy
               </a>
             </li>
@@ -139,16 +139,16 @@
           </div>
         </div>
       </section>
-      <section class="reviews">
-        <div class="reviews__wrapper slider">
-          <ul class="reviews__list slider__list">
+      <section class="reviews container">
+        <div class="reviews__wrapper">
+          <ul class="reviews__list">
             <li class="reviews__item slider__item slider__item--active">
               <div class="reviews__author-info">
                 <b class="reviews__author-name">
                   Николай Петров
                 </b>
                 <p class="reviews__text">
-                  Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!
+                  &#171;Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!&#187;
                 </p>
                 <span class="reviews__info">
                   25 лет, водитель трамвая
@@ -161,7 +161,7 @@
                   Николай Петров
                 </b>
                 <p class="reviews__text">
-                  Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!
+                  &#171;Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!&#187;
                 </p>
                 <span class="reviews__info">
                   25 лет, водитель трамвая
@@ -174,7 +174,7 @@
                   Николай Петров
                 </b>
                 <p class="reviews__text">
-                  Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!
+                  &#171;Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!&#187;
                 </p>
                 <span class="reviews__info">
                   25 лет, водитель трамвая
@@ -182,7 +182,7 @@
               </div>
             </li>
           </ul>
-          <ul>
+          <ul class="slider__toggle-list">
             <li>
               <button class="slider__toggle slider__toggle--current" type="button">
                 <span class="visually-hidden">Кнопка 1</span>
