--- a/source/photo.html
+++ b/source/photo.html
@@ -21,17 +21,17 @@
             </a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="">
+            <a class="main-nav__link">
               Фотографии
             </a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="">
+            <a class="main-nav__link" href="form.html">
               Конкурс
             </a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="">
+            <a class="main-nav__link" href="https://htmlacademy.ru/intensive/adaptive">
               HTML Academy
             </a>
           </li>
