Сверстал форму в мобильном и планшетном

--- a/source/index.html
+++ b/source/index.html
@@ -61,33 +61,35 @@
       <section class="intro">
         <h1 class="intro__title">Взгляните на жизнь иначе!</h1>
         <span class="intro__image"></span>
-        <div class="download container">
-          <a class="button download__button" href="https://www.apple.com/ru/ios/app-store/">
-            Скачать приложение
-          </a>
-          <ul class="download__list">
-            <li class="download__item">
-              <a class="download__link" href="https://www.apple.com/ru/ios/app-store/">
-                <img src="img/logo-apple.svg" width="47px" height="56px" alt="Логотип компании Apple">
-                <span class="visually-hidden">App Store</span>
-              </a>
-            </li>
-            <li class="download__item">
-              <a class="download__link" href="https://play.google.com/store">
-                <img src="img/logo-android.svg" width="43px" height="47px" alt="Логотип Android">
-                <span class="visually-hidden">Android</span>
-              </a>
-            </li>
-            <li class="download__item">
-              <a class="download__link" href="https://www.microsoft.com/ru-RU/store/apps">
-                <img src="img/logo-microsoft.svg" width="44px" height="41px" alt="Логотип Microsoft">
-                <span class="visually-hidden">Microsoft</span>
-              </a>
-            </li>
-          </ul>
-          <p class="intro__text-style">
-            Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8
-          </p>
+        <div class="download">
+          <div class="container">
+            <a class="button download__button" href="https://www.apple.com/ru/ios/app-store/">
+              Скачать приложение
+            </a>
+            <ul class="download__list">
+              <li class="download__item">
+                <a class="download__link" href="https://www.apple.com/ru/ios/app-store/">
+                  <img src="img/logo-apple.svg" width="47px" height="56px" alt="Логотип компании Apple">
+                  <span class="visually-hidden">App Store</span>
+                </a>
+              </li>
+              <li class="download__item">
+                <a class="download__link" href="https://play.google.com/store">
+                  <img src="img/logo-android.svg" width="43px" height="47px" alt="Логотип Android">
+                  <span class="visually-hidden">Android</span>
+                </a>
+              </li>
+              <li class="download__item">
+                <a class="download__link" href="https://www.microsoft.com/ru-RU/store/apps">
+                  <img src="img/logo-microsoft.svg" width="44px" height="41px" alt="Логотип Microsoft">
+                  <span class="visually-hidden">Microsoft</span>
+                </a>
+              </li>
+            </ul>
+            <p class="intro__text-style">
+              Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8
+            </p>
+          </div>
         </div>
       </section>
       <section class="advantages">
@@ -327,8 +329,8 @@
         </div>
       </section>
     </main>
-    <footer class="page-footer container">
-      <div  class="page-footer__wrapper">
+    <footer class="page-footer">
+      <div  class="page-footer__wrapper container">
         <a class="page-footer__logo">
           <img class="page-footer__image" src="img/logo-pink-blue-mobile.svg">
         </a>
