--- a/source/form.html
+++ b/source/form.html
@@ -2,154 +2,196 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>HTML Academy: Пинк</title>
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="page-header">
-      <a class="page-header__logo">
-        <img src="https://via.placeholder.com/150x150">
-      </a>
-      <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">
-          <span class="visually-hidden">Открыть меню</span>
-        </button>
-        <ul class="main-nav__list">
-          <li class="main-nav__item">
-            <a class="main-nav__link" href="index.html">
-              Главная
-            </a>
-          </li>
-          <li class="main-nav__item">
-            <a class="main-nav__link" href="photo.html">
-              Фотографии
-            </a>
-          </li>
-          <li class="main-nav__item">
-            <a class="main-nav__link">
-              Конкурс
-            </a>
-          </li>
-          <li class="main-nav__item">
-            <a class="main-nav__link" href="https://htmlacademy.ru/intensive/adaptive">
-              HTML Academy
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <main class="page-main">
-      <div class="page-main__background">
-        <h1 class="page-main__title page-main__title--height">Конкурс на самое безбашенное путешествие с Пинк</h1>
-      </div>
-      <section class="contest">
-        <p class="contest__text">
-          Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!
-        </p>
-        <form class="contest__form" action="https://echo.htmlacademy.ru/courses" method="post">
-          <ul class="contest__name-list">
-            <li>
-              <label class="contest__label">
-                Фамилия:
-                <input class="contest__input" type="text" name="surname" placeholder="Укажите фамилию *">
-              </label>
+      <div class="page-header__block container">
+        <a class="page-header__link">
+          <svg class="page-header__logo" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="74.426px" height="22.859px" viewBox="0 0 74.426 22.859" enable-background="new 0 0 74.426 22.859" xml:space="preserve">
+            <g>
+              <path fill="#FFFFFF" d="M0,1.449c0-0.708,0.58-1.288,1.256-1.288h7.18c5.087,0,8.436,2.704,8.436,7.147v0.064 c0,4.861-4.057,7.373-8.854,7.373H2.544v6.825c0,0.708-0.58,1.288-1.288,1.288C0.58,22.859,0,22.279,0,21.571V1.449z M8.114,12.428 c3.734,0,6.182-1.996,6.182-4.958V7.405c0-3.22-2.415-4.894-6.054-4.894H2.544v9.917H8.114z"/>
+              <path fill="#FFFFFF" d="M21.729,1.288C21.729,0.58,22.308,0,22.983,0c0.709,0,1.288,0.58,1.288,1.288v20.283 c0,0.708-0.579,1.288-1.288,1.288c-0.676,0-1.255-0.58-1.255-1.288V1.288z"/>
+              <path fill="#FFFFFF" d="M30.87,1.32c0-0.676,0.579-1.256,1.256-1.256h0.354c0.58,0,0.934,0.29,1.288,0.74l13.684,17.45V1.256 C47.451,0.58,47.998,0,48.707,0c0.676,0,1.223,0.58,1.223,1.256v20.348c0,0.676-0.482,1.191-1.158,1.191h-0.129 c-0.548,0-0.934-0.322-1.32-0.772L33.349,4.153v17.45c0,0.676-0.547,1.256-1.255,1.256c-0.677,0-1.224-0.58-1.224-1.256V1.32z"/>
+              <path fill="#FFFFFF" d="M56.3,1.288C56.3,0.58,56.879,0,57.556,0c0.708,0,1.287,0.58,1.287,1.288v12.331L71.689,0.451 C71.979,0.193,72.269,0,72.688,0c0.676,0,1.224,0.612,1.224,1.256c0,0.354-0.161,0.644-0.419,0.901l-7.984,7.92l8.564,10.561 c0.225,0.29,0.354,0.547,0.354,0.934c0,0.676-0.579,1.288-1.287,1.288c-0.483,0-0.806-0.258-1.03-0.58l-8.403-10.463l-4.862,4.861 v4.894c0,0.708-0.579,1.288-1.287,1.288c-0.677,0-1.256-0.58-1.256-1.288V1.288z"/>
+            </g>
+          </svg>
+        </a>
+        <nav class="nav">
+          <button class="nav__toggle" type="button">
+            <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="49.945px" height="24.007px" viewBox="0 0 49.945 24.007" enable-background="new 0 0 49.945 24.007" xml:space="preserve">
+              <g id="miu">
+                <g id="editor_list_view_hambuger_menu_glyph">
+                  <g>
+                    <path id="path-1" fill="#FFFFFF" d="M1.137,0C0.51,0,0,0.428,0,1.01v1.981c0,0.558,0.494,1.01,1.139,1.01h47.671 c0.628,0,1.138-0.428,1.138-1.01V1.01c0-0.558-0.494-1.01-1.138-1.01H1.137z M1.137,10.003C0.51,10.003,0,10.431,0,11.013v1.98 c0,0.557,0.494,1.01,1.139,1.01h47.671c0.628,0,1.138-0.428,1.138-1.01v-1.98c0-0.558-0.494-1.01-1.138-1.01H1.137z M1.137,20.005C0.51,20.005,0,20.434,0,21.016v1.981c0,0.557,0.494,1.01,1.139,1.01h47.671c0.628,0,1.138-0.428,1.138-1.01 v-1.981c0-0.558-0.494-1.011-1.138-1.011H1.137z"/>
+                  </g>
+                </g>
+              </g>
+            </svg>
+            <span class="visually-hidden">Открыть меню</span>
+          </button>
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a class="nav__link" href="index.html">
+                Главная
+              </a>
             </li>
-            <li>
-              <label class="contest__label">
-                Имя:
-                <input class="contest__input" type="text" name="name" placeholder="Введите ваше имя *">
-              </label>
+            <li class="nav__item">
+              <a class="nav__link" href="photo.html">
+                Фотографии
+              </a>
             </li>
-            <li>
-              <label class="contest__label">
-                Отчество:
-                <input class="contest__input" type="text" name="middle-name" placeholder="Ну и отчество тоже">
-              </label>
+            <li class="nav__item">
+              <a class="nav__link">
+                Конкурс
+              </a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="https://htmlacademy.ru/intensive/adaptive">
+                HTML Academy
+              </a>
             </li>
           </ul>
-          <fieldset class="contest__fieldset">
-            <div class="contest__container">
+        </nav>
+      </div>
+    </header>
+    <main class="page-main">
+      <div class="page-main__background container">
+        <h1 class="page-main__title">Конкурс на самое безбашенное путешествие с Пинк</h1>
+      </div>
+      <section class="contest">
+        <p class="contest__lead container">
+          Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту! <span class="contest__lead--form">Пожалуйста, заполните форму ниже:</span>
+        </p>
+        <form class="contest__form" action="https://echo.htmlacademy.ru/courses" method="post">
+          <div class="contest__element contest__element--first container">
+            <ul class="contest__name-list">
+              <li>
+                <label class="contest__label">
+                  <span class="contest__caption">
+                    Фамилия:
+                  </span>
+                  <input class="contest__input" type="text" name="surname" placeholder="Укажите фамилию *">
+                </label>
+              </li>
+              <li>
+                <label class="contest__label">
+                  <span class="contest__caption">
+                    Имя:
+                  </span>
+                  <input class="contest__input" type="text" name="name" placeholder="Введите ваше имя *">
+                </label>
+              </li>
+              <li>
+                <label class="contest__label">
+                  <span class="contest__caption">
+                    Отчество:
+                  </span>
+                  <input class="contest__input" type="text" name="middle-name" placeholder="Ну и отчество тоже">
+                </label>
+              </li>
+            </ul>
+          </div>
+          <div class="contest__element contest__element--second contest__container container">
+            <fieldset class="contest__fieldset">
               <legend class="contest__title">Ваши безбашенные достижения в путешествии</legend>
-              <ul class="contest-list">
-                <li class="contest-list__item">
+              <ul class="contest__list">
+                <li class="contest__item">
                   <label class="contest__text">
                     <input type="checkbox" name="selfie" checked>
                     Сделал селфи с акулой
                   </label>
                 </li>
-                <li class="contest-list__item">
+                <li class="contest__item">
                   <label class="contest__text">
                     <input type="checkbox" name="beach" checked>
                     Обгорел на пляже
                   </label>
                 </li>
-                <li class="contest-list__item">
+                <li class="contest__item">
                   <label class="contest__text">
                     <input type="checkbox" name="chack">
                     Видел Чака Норриса
                   </label>
                 </li>
-                <li class="contest-list__item">
+                <li class="contest__item">
                   <label class="contest__text">
                     <input type="checkbox" name="souvenirs">
                     Накупил сувениров
                   </label>
                 </li>
-                <li class="contest-list__item">
+                <li class="contest__item">
                   <label class="contest__text">
                     <input type="checkbox" name="tower" checked>
                     Удержал башню
                   </label>
                 </li>
-                <li class="contest-list__item">
+                <li class="contest__item">
                   <label class="contest__text">
                     <input type="checkbox" name="hotel">
                     Разгромил отель
                   </label>
                 </li>
               </ul>
-            </div>
-          </fieldset>
-          <div>
-            <label class="contest__label">
-              Номер телефона
-              <input class="contest__input" type="tel" name="tel" placeholder="Номер, пожалуйста">
-            </label>
-            <label class="contest__label">
-              Адрес почты
-              <input class="contest__input" type="email" name="email" placeholder="Введите почту *">
-            </label>
+            </fieldset>
           </div>
-          <fieldset class="contest__fieldset">
-            <div class="contest__container">
+          <div class="contest__element contest__element--third container">
+            <fieldset class="contest__fieldset">
+              <legend class="contest__title contest__title--none">Контактная информация</legend>
+              <ul class="contest__name-list contest__name-list--padding">
+                <li class="contest__item">
+                  <label class="contest__label contest__label--column">
+                    <span class="contest__caption contest__caption--order">
+                      Номер телефона
+                    </span>
+                    <input class="contest__input" type="tel" name="tel" placeholder="Номер, пожалуйста">
+                  </label>
+                </li>
+                <li class="contest__item">
+                  <label class="contest__label contest__label--column">
+                    <span class="contest__caption contest__caption--order">
+                      Адрес почты
+                    </span>
+                    <input class="contest__input" type="email" name="email" placeholder="Введите почту *">
+                  </label>
+                </li>
+              </ul>
+            </fieldset>
+          </div>
+          <div class="contest__element contest__element--fourth contest__container container">
+            <fieldset class="contest__fieldset">
               <legend class="contest__title">С каким приложением путешествовали?</legend>
-              <ul class="contest-list">
-                <li class="contest-list__item">
+              <ul class="contest__list">
+                <li class="contest__item">
                   <label class="contest__text">
                     <input type="radio" name="os" value="ios" checked>
                     Pink для iOS
                   </label>
                 </li>
-                <li class="contest-list__item">
+                <li class="contest__item">
                   <label class="contest__text">
                     <input type="radio" name="os" value="android">
                     Pink на Android
                   </label>
                 </li>
-                <li class="contest-list__item">
+                <li class="contest__item">
                   <label class="contest__text">
                     <input type="radio" name="os" value="windows">
                     Windows Phone
                   </label>
                 </li>
               </ul>
-            </div>
-          </fieldset>
-          <label class="contest__title">
-            Опишите свои эмоции
-            <textarea class="contest__input" name="comment" rows="10" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
-          </label>
-          <button class="contest__button" type="submit">Отправить форму</button>
+            </fieldset>
+          </div>
+          <div class="contest__element contest__element--fifth container">
+            <fieldset class="contest__fieldset">
+              <legend class="contest__title">Опишите свои эмоции</legend>
+              <textarea class="contest__input contest__input--width" name="comment" rows="10" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
+            </fieldset>
+          </div>
+            <button class="contest__element contest__element--sixth contest__button" type="submit">Отправить форму</button>
         </form>
         <small class="contest__small">
           <span class="contest__small contest__small--star">*</span> - обязательные поля
@@ -157,27 +199,35 @@
       </section>
     </main>
     <footer class="page-footer">
-      <a href="index.html" class="page-footer__logo">
-        <img src="https://via.placeholder.com/150x150">
-      </a>
-      <ul class="page-footer__list">
-        <li class="page-footer__item">
-          <a class="page-footer__link" href="">Twitter</a>
-        </li>
-        <li class="page-footer__item">
-          <a class="page-footer__link" href="">Facebook</a>
-        </li>
-        <li class="page-footer__item">
-          <a class="page-footer__link" href="">Ellipse</a>
-        </li>
-      </ul>
-      <!--
-      <p class="page-footer__text">
-        Разработано
-        <a href="https://htmlacademy.ru/intensive/adaptive">
+      <div  class="page-footer__wrapper container">
+        <a class="page-footer__logo">
+          <img class="page-footer__image" src="img/logo-pink-blue-mobile.svg">
         </a>
-      </p>
-      -->
+        <ul class="page-footer__list">
+          <li class="page-footer__item">
+            <a class="page-footer__link page-footer__link--twitter" href="">
+              <span class="visually-hidden">Twitter</span>
+            </a>
+          </li>
+          <li class="page-footer__item">
+            <a class="page-footer__link page-footer__link--facebook" href="">
+              <span class="visually-hidden">Facebook</span>
+            </a>
+          </li>
+          <li class="page-footer__item">
+            <a class="page-footer__link page-footer__link--youtube" href="">
+              <span class="visually-hidden">Youtube</span>
+            </a>
+          </li>
+        </ul>
+        <div class="page-footer__communication">
+          <p class="page-footer__text">
+            Разработано
+          </p>
+          <a class="page-footer__icon" href="https://htmlacademy.ru/intensive/adaptive">
+          </a>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
