Сверстал форму десктоп

--- a/source/form.html
+++ b/source/form.html
@@ -66,136 +66,140 @@
           Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту! <span class="contest__lead--form">Пожалуйста, заполните форму ниже:</span>
         </p>
         <form class="contest__form" action="https://echo.htmlacademy.ru/courses" method="post">
-          <div class="contest__element contest__element--first container">
-            <ul class="contest__name-list">
-              <li>
-                <label class="contest__label">
-                  <span class="contest__caption">
-                    Фамилия:
-                  </span>
-                  <input class="contest__input" type="text" name="surname" placeholder="Укажите фамилию *">
-                </label>
-              </li>
-              <li>
-                <label class="contest__label">
-                  <span class="contest__caption">
-                    Имя:
-                  </span>
-                  <input class="contest__input" type="text" name="name" placeholder="Введите ваше имя *">
-                </label>
-              </li>
-              <li>
-                <label class="contest__label">
-                  <span class="contest__caption">
-                    Отчество:
-                  </span>
-                  <input class="contest__input" type="text" name="middle-name" placeholder="Ну и отчество тоже">
-                </label>
-              </li>
-            </ul>
-          </div>
-          <div class="contest__element contest__element--second contest__container container">
-            <fieldset class="contest__fieldset">
-              <legend class="contest__title">Ваши безбашенные достижения в путешествии</legend>
-              <ul class="contest__list">
-                <li class="contest__item">
-                  <label class="contest__text">
-                    <input type="checkbox" name="selfie" checked>
-                    Сделал селфи с акулой
-                  </label>
-                </li>
-                <li class="contest__item">
-                  <label class="contest__text">
-                    <input type="checkbox" name="beach" checked>
-                    Обгорел на пляже
-                  </label>
-                </li>
-                <li class="contest__item">
-                  <label class="contest__text">
-                    <input type="checkbox" name="chack">
-                    Видел Чака Норриса
-                  </label>
-                </li>
-                <li class="contest__item">
-                  <label class="contest__text">
-                    <input type="checkbox" name="souvenirs">
-                    Накупил сувениров
-                  </label>
-                </li>
-                <li class="contest__item">
-                  <label class="contest__text">
-                    <input type="checkbox" name="tower" checked>
-                    Удержал башню
-                  </label>
-                </li>
-                <li class="contest__item">
-                  <label class="contest__text">
-                    <input type="checkbox" name="hotel">
-                    Разгромил отель
-                  </label>
-                </li>
-              </ul>
-            </fieldset>
-          </div>
-          <div class="contest__element contest__element--third container">
-            <fieldset class="contest__fieldset">
-              <legend class="contest__title contest__title--none">Контактная информация</legend>
-              <ul class="contest__name-list contest__name-list--padding">
-                <li class="contest__item">
-                  <label class="contest__label contest__label--column">
-                    <span class="contest__caption contest__caption--order">
-                      Номер телефона
+          <div class="contest__flex">
+            <div class="contest__element contest__element--first container">
+              <ul class="contest__name-list">
+                <li>
+                  <label class="contest__label">
+                    <span class="contest__caption">
+                      Фамилия:
                     </span>
-                    <input class="contest__input" type="tel" name="tel" placeholder="Номер, пожалуйста">
+                    <input class="contest__input" type="text" name="surname" placeholder="Укажите фамилию *">
                   </label>
                 </li>
-                <li class="contest__item">
-                  <label class="contest__label contest__label--column">
-                    <span class="contest__caption contest__caption--order">
-                      Адрес почты
+                <li>
+                  <label class="contest__label">
+                    <span class="contest__caption">
+                      Имя:
                     </span>
-                    <input class="contest__input" type="email" name="email" placeholder="Введите почту *">
+                    <input class="contest__input" type="text" name="name" placeholder="Введите ваше имя *">
+                  </label>
+                </li>
+                <li>
+                  <label class="contest__label">
+                    <span class="contest__caption">
+                      Отчество:
+                    </span>
+                    <input class="contest__input" type="text" name="middle-name" placeholder="Ну и отчество тоже">
                   </label>
                 </li>
               </ul>
-            </fieldset>
+            </div>
+            <div class="contest__element contest__element--second contest__container container">
+              <fieldset class="contest__fieldset">
+                <legend class="contest__title">Ваши безбашенные достижения в путешествии</legend>
+                <ul class="contest__list contest__list--grid">
+                  <li class="contest__item">
+                    <label class="contest__text">
+                      <input type="checkbox" name="selfie" checked>
+                      Сделал селфи с акулой
+                    </label>
+                  </li>
+                  <li class="contest__item">
+                    <label class="contest__text">
+                      <input type="checkbox" name="beach" checked>
+                      Обгорел на пляже
+                    </label>
+                  </li>
+                  <li class="contest__item">
+                    <label class="contest__text">
+                      <input type="checkbox" name="chack">
+                      Видел Чака Норриса
+                    </label>
+                  </li>
+                  <li class="contest__item">
+                    <label class="contest__text">
+                      <input type="checkbox" name="souvenirs">
+                      Накупил сувениров
+                    </label>
+                  </li>
+                  <li class="contest__item">
+                    <label class="contest__text">
+                      <input type="checkbox" name="tower" checked>
+                      Удержал башню
+                    </label>
+                  </li>
+                  <li class="contest__item">
+                    <label class="contest__text">
+                      <input type="checkbox" name="hotel">
+                      Разгромил отель
+                    </label>
+                  </li>
+                </ul>
+              </fieldset>
+            </div>
+            <div class="contest__element contest__element--third container">
+              <fieldset class="contest__fieldset">
+                <legend class="contest__title contest__title--none">Контактная информация</legend>
+                <ul class="contest__name-list contest__name-list--contact">
+                  <li class="contest__item">
+                    <label class="contest__label contest__label--column contest__label--icon contest__label--icon-phone">
+                      <span class="contest__caption contest__caption--order">
+                        Номер телефона
+                      </span>
+                      <input class="contest__input" type="tel" name="tel" placeholder="Номер, пожалуйста">
+                    </label>
+                  </li>
+                  <li class="contest__item">
+                    <label class="contest__label contest__label--column contest__label--icon contest__label--icon-mail">
+                      <span class="contest__caption contest__caption--order">
+                        Адрес почты
+                      </span>
+                      <input class="contest__input" type="email" name="email" placeholder="Введите почту *">
+                    </label>
+                  </li>
+                </ul>
+              </fieldset>
+            </div>
+            <div class="contest__element contest__element--fourth contest__container container">
+              <fieldset class="contest__fieldset">
+                <legend class="contest__title">С каким приложением путешествовали?</legend>
+                <ul class="contest__list">
+                  <li class="contest__item">
+                    <label class="contest__text">
+                      <input type="radio" name="os" value="ios" checked>
+                      Pink для iOS
+                    </label>
+                  </li>
+                  <li class="contest__item">
+                    <label class="contest__text">
+                      <input type="radio" name="os" value="android">
+                      Pink на Android
+                    </label>
+                  </li>
+                  <li class="contest__item">
+                    <label class="contest__text">
+                      <input type="radio" name="os" value="windows">
+                      Windows Phone
+                    </label>
+                  </li>
+                </ul>
+              </fieldset>
+            </div>
+            <div class="contest__element contest__element--fifth container">
+              <fieldset class="contest__fieldset">
+                <legend class="contest__title">Опишите свои эмоции</legend>
+                <textarea class="contest__input contest__input--width" name="comment" rows="10" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
+              </fieldset>
+            </div>
           </div>
-          <div class="contest__element contest__element--fourth contest__container container">
-            <fieldset class="contest__fieldset">
-              <legend class="contest__title">С каким приложением путешествовали?</legend>
-              <ul class="contest__list">
-                <li class="contest__item">
-                  <label class="contest__text">
-                    <input type="radio" name="os" value="ios" checked>
-                    Pink для iOS
-                  </label>
-                </li>
-                <li class="contest__item">
-                  <label class="contest__text">
-                    <input type="radio" name="os" value="android">
-                    Pink на Android
-                  </label>
-                </li>
-                <li class="contest__item">
-                  <label class="contest__text">
-                    <input type="radio" name="os" value="windows">
-                    Windows Phone
-                  </label>
-                </li>
-              </ul>
-            </fieldset>
+          <div class="contest__bottom container">
+            <button class="contest__button" type="submit">Отправить форму</button>
+            <small class="contest__small">
+              <span class="contest__star">*</span> - обязательные поля
+            </small>
           </div>
-          <div class="contest__element contest__element--fifth container">
-            <fieldset class="contest__fieldset">
-              <legend class="contest__title">Опишите свои эмоции</legend>
-              <textarea class="contest__input contest__input--width" name="comment" rows="10" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
-            </fieldset>
-          </div>
-            <button class="contest__element contest__element--sixth contest__button" type="submit">Отправить форму</button>
         </form>
-        <small class="contest__small">
-          <span class="contest__small contest__small--star">*</span> - обязательные поля
-        </small>
       </section>
     </main>
     <footer class="page-footer">
