Сверстал форму десктоп

--- a/source/form.html
+++ b/source/form.html
@@ -63,7 +63,7 @@
       </div>
       <section class="contest">
         <p class="contest__lead container">
-          Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту! <span class="contest__lead--form">Пожалуйста, заполните форму ниже:</span>
+          Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту! <span class="contest__lead contest__lead--form">Пожалуйста, заполните форму ниже:</span>
         </p>
         <form class="contest__form" action="https://echo.htmlacademy.ru/courses" method="post">
           <div class="contest__flex">
