--- a/source/photo.html
+++ b/source/photo.html
@@ -2,55 +2,74 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>HTML Academy: Пинк</title>
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="page-header">
-      <a class="page-header__logo">
-        <img src="https://via.placeholder.com/150x150">
-      </a>
-      <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">
-          <span class="visually-hidden">Открыть меню</span>
-        </button>
-        <ul class="main-nav__list">
-          <li class="main-nav__item">
-            <a class="main-nav__link" href="index.html">
-              Главная
-            </a>
-          </li>
-          <li class="main-nav__item">
-            <a class="main-nav__link">
-              Фотографии
-            </a>
-          </li>
-          <li class="main-nav__item">
-            <a class="main-nav__link" href="form.html">
-              Конкурс
-            </a>
-          </li>
-          <li class="main-nav__item">
-            <a class="main-nav__link" href="https://htmlacademy.ru/intensive/adaptive">
-              HTML Academy
-            </a>
-          </li>
-        </ul>
-      </nav>
+      <div class="page-header__block container">
+        <a class="page-header__link" href="index.html">
+          <svg class="page-header__logo" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="74.426px" height="22.859px" viewBox="0 0 74.426 22.859" enable-background="new 0 0 74.426 22.859" xml:space="preserve">
+            <g>
+              <path fill="#FFFFFF" d="M0,1.449c0-0.708,0.58-1.288,1.256-1.288h7.18c5.087,0,8.436,2.704,8.436,7.147v0.064 c0,4.861-4.057,7.373-8.854,7.373H2.544v6.825c0,0.708-0.58,1.288-1.288,1.288C0.58,22.859,0,22.279,0,21.571V1.449z M8.114,12.428 c3.734,0,6.182-1.996,6.182-4.958V7.405c0-3.22-2.415-4.894-6.054-4.894H2.544v9.917H8.114z"/>
+              <path fill="#FFFFFF" d="M21.729,1.288C21.729,0.58,22.308,0,22.983,0c0.709,0,1.288,0.58,1.288,1.288v20.283 c0,0.708-0.579,1.288-1.288,1.288c-0.676,0-1.255-0.58-1.255-1.288V1.288z"/>
+              <path fill="#FFFFFF" d="M30.87,1.32c0-0.676,0.579-1.256,1.256-1.256h0.354c0.58,0,0.934,0.29,1.288,0.74l13.684,17.45V1.256 C47.451,0.58,47.998,0,48.707,0c0.676,0,1.223,0.58,1.223,1.256v20.348c0,0.676-0.482,1.191-1.158,1.191h-0.129 c-0.548,0-0.934-0.322-1.32-0.772L33.349,4.153v17.45c0,0.676-0.547,1.256-1.255,1.256c-0.677,0-1.224-0.58-1.224-1.256V1.32z"/>
+              <path fill="#FFFFFF" d="M56.3,1.288C56.3,0.58,56.879,0,57.556,0c0.708,0,1.287,0.58,1.287,1.288v12.331L71.689,0.451 C71.979,0.193,72.269,0,72.688,0c0.676,0,1.224,0.612,1.224,1.256c0,0.354-0.161,0.644-0.419,0.901l-7.984,7.92l8.564,10.561 c0.225,0.29,0.354,0.547,0.354,0.934c0,0.676-0.579,1.288-1.287,1.288c-0.483,0-0.806-0.258-1.03-0.58l-8.403-10.463l-4.862,4.861 v4.894c0,0.708-0.579,1.288-1.287,1.288c-0.677,0-1.256-0.58-1.256-1.288V1.288z"/>
+            </g>
+          </svg>
+        </a>
+        <nav class="nav">
+          <button class="nav__toggle" type="button">
+            <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="49.945px" height="24.007px" viewBox="0 0 49.945 24.007" enable-background="new 0 0 49.945 24.007" xml:space="preserve">
+              <g id="miu">
+                <g id="editor_list_view_hambuger_menu_glyph">
+                  <g>
+                    <path id="path-1" fill="#FFFFFF" d="M1.137,0C0.51,0,0,0.428,0,1.01v1.981c0,0.558,0.494,1.01,1.139,1.01h47.671 c0.628,0,1.138-0.428,1.138-1.01V1.01c0-0.558-0.494-1.01-1.138-1.01H1.137z M1.137,10.003C0.51,10.003,0,10.431,0,11.013v1.98 c0,0.557,0.494,1.01,1.139,1.01h47.671c0.628,0,1.138-0.428,1.138-1.01v-1.98c0-0.558-0.494-1.01-1.138-1.01H1.137z M1.137,20.005C0.51,20.005,0,20.434,0,21.016v1.981c0,0.557,0.494,1.01,1.139,1.01h47.671c0.628,0,1.138-0.428,1.138-1.01 v-1.981c0-0.558-0.494-1.011-1.138-1.011H1.137z"/>
+                  </g>
+                </g>
+              </g>
+            </svg>
+            <span class="visually-hidden">Открыть меню</span>
+          </button>
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a class="nav__link" href="index.html">
+                Главная
+              </a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link">
+                Фотографии
+              </a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="form.html">
+                Конкурс
+              </a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="https://htmlacademy.ru/intensive/adaptive">
+                HTML Academy
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main class="page-main">
-      <div class="page-main__background">
-        <h1 class="page-main__title page-main__title--height">Фотографии пользователей</h1>
+      <div class="page-main__background container">
+        <h1 class="page-main__title page-main__title--width">Фотографии пользователей</h1>
       </div>
       <section class="gallery">
-        <p class="gallery__text">
+        <p class="gallery__lead container">
           Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?
         </p>
         <article class="gallery-post">
           <img src="https://via.placeholder.com/150x150">
           <blockquote>
             <cite class="gallery-post__user">Анна</cite>
-            <p class="gallery__text gallery__text--height">
+            <p class="gallery__text">
               Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!
             </p>
           </blockquote>
@@ -60,7 +79,7 @@
           <img src="https://via.placeholder.com/150x150">
           <blockquote>
             <cite class="gallery-post__user">Левон</cite>
-            <p class="gallery__text gallery__text--height">
+            <p class="gallery__text">
               Вчера он на луну летал, сегодня в руки к нам попал.
             </p>
           </blockquote>
@@ -70,7 +89,7 @@
           <img src="https://via.placeholder.com/150x150">
           <blockquote>
             <cite class="gallery-post__user">Антон</cite>
-            <p class="gallery__text gallery__text--height">
+            <p class="gallery__text">
               Соседи будут рады!
             </p>
           </blockquote>
@@ -80,7 +99,7 @@
           <img src="https://via.placeholder.com/150x150">
           <blockquote>
             <cite class="gallery-post__user">Борис</cite>
-            <p class="gallery__text gallery__text--height">
+            <p class="gallery__text">
               Здесь могла быть ваша цитата о высоком и вечном.
             </p>
           </blockquote>
@@ -90,7 +109,7 @@
           <img src="https://via.placeholder.com/150x150">
           <blockquote>
             <cite class="gallery-post__user">Сергей</cite>
-            <p class="gallery__text gallery__text--height">
+            <p class="gallery__text">
               Самая кубанская в мире!
             </p>
           </blockquote>
@@ -100,7 +119,7 @@
           <img src="https://via.placeholder.com/150x150">
           <blockquote>
             <cite class="gallery-post__user">Максим</cite>
-            <p class="gallery__text gallery__text--height">
+            <p class="gallery__text">
               Где снег-то?
             </p>
           </blockquote>
@@ -110,13 +129,13 @@
           <img src="https://via.placeholder.com/150x150">
           <blockquote>
             <cite class="gallery-post__user">Надежда</cite>
-            <p class="gallery__text gallery__text--height">
+            <p class="gallery__text">
               Всем GM и взаимные лайки!
             </p>
           </blockquote>
           <button class="gallery-post__button" type="button"><span class="gallery-post__like">Нравится: 2560</span></button>
         </article>
-        <p class="gallery__text">
+        <p class="gallery__lead">
           Затмите их всех! Выкладывайте все, что накопилось в телефоне!
         </p>
       </section>
