--- a/source/photo.html
+++ b/source/photo.html
@@ -62,81 +62,122 @@
         <h1 class="page-main__title page-main__title--width">Фотографии пользователей</h1>
       </div>
       <section class="gallery">
-        <p class="gallery__lead container">
-          Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?
-        </p>
-        <article class="gallery-post">
-          <img src="https://via.placeholder.com/150x150">
-          <blockquote>
-            <cite class="gallery-post__user">Анна</cite>
-            <p class="gallery__text">
-              Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!
-            </p>
-          </blockquote>
-          <button class="gallery-post__button" type="button"><span class="gallery-post__like">Нравится: 215</span></button>
-        </article>
-        <article class="gallery-post">
-          <img src="https://via.placeholder.com/150x150">
-          <blockquote>
-            <cite class="gallery-post__user">Левон</cite>
-            <p class="gallery__text">
-              Вчера он на луну летал, сегодня в руки к нам попал.
-            </p>
-          </blockquote>
-          <button class="gallery-post__button" type="button"><span class="gallery-post__like">Нравится: 356</span></button>
-        </article>
-        <article class="gallery-post">
-          <img src="https://via.placeholder.com/150x150">
-          <blockquote>
-            <cite class="gallery-post__user">Антон</cite>
-            <p class="gallery__text">
-              Соседи будут рады!
-            </p>
-          </blockquote>
-          <button class="gallery-post__button" type="button"><span class="gallery-post__like">Нравится: 666</span></button>
-        </article>
-        <article class="gallery-post">
-          <img src="https://via.placeholder.com/150x150">
-          <blockquote>
-            <cite class="gallery-post__user">Борис</cite>
-            <p class="gallery__text">
-              Здесь могла быть ваша цитата о высоком и вечном.
-            </p>
-          </blockquote>
-          <button class="gallery-post__button" type="button"><span class="gallery-post__like">Нравится: 215</span></button>
-        </article>
-        <article class="gallery-post">
-          <img src="https://via.placeholder.com/150x150">
-          <blockquote>
-            <cite class="gallery-post__user">Сергей</cite>
-            <p class="gallery__text">
-              Самая кубанская в мире!
-            </p>
-          </blockquote>
-          <button class="gallery-post__button" type="button"><span class="gallery-post__like">Нравится: 4</span></button>
-        </article>
-        <article class="gallery-post">
-          <img src="https://via.placeholder.com/150x150">
-          <blockquote>
-            <cite class="gallery-post__user">Максим</cite>
-            <p class="gallery__text">
-              Где снег-то?
-            </p>
-          </blockquote>
-          <button class="gallery-post__button" type="button"><span class="gallery-post__like">Нравится: 150</span></button>
-        </article>
-        <article class="gallery-post">
-          <img src="https://via.placeholder.com/150x150">
-          <blockquote>
-            <cite class="gallery-post__user">Надежда</cite>
-            <p class="gallery__text">
-              Всем GM и взаимные лайки!
-            </p>
-          </blockquote>
-          <button class="gallery-post__button" type="button"><span class="gallery-post__like">Нравится: 2560</span></button>
-        </article>
         <p class="gallery__lead">
-          Затмите их всех! Выкладывайте все, что накопилось в телефоне!
+          Взгляните на фотографии, которые выкладывают пользователи!<br class="gallery__break">
+          Видите, как не хватает ваших?
+        </p>
+        <article class="gallery__post gallery__post--background">
+          <picture>
+            <source srcset="img/panorama-mobile@1x.jpg" media="(max-width: 320px)">
+            <source srcset="img/panorama-tablet@1x.jpg" media="(max-width: 660px)">
+            <source srcset="img/panorama-desktop@1x.jpg" media="(min-width: 1200px)">
+            <img src="img/panorama-desktop@1x.jpg">
+          </picture>
+          <div class="container">
+            <div class="gallery__block ">
+              <b class="gallery__user">Анна</b>
+              <p class="gallery__text">
+                Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!
+              </p>
+              <button class="gallery__button" type="button"><span class="gallery__like">Нравится: 215</span></button>
+            </div>
+          </div>
+        </article>
+        <div class="gallery__grid container">
+          <article class="gallery__post">
+            <picture>
+              <source srcset="img/photo-car-mobile@1x.jpg" media="(max-width: 320px)">
+              <source srcset="img/photo-car-tablet@1x.jpg" media="(max-width: 660px)">
+              <source srcset="img/photo-car-desktop@1x.jpg" media="(min-width: 1200px)">
+              <img src="img/photo-car-desktop@1x.jpg">
+            </picture>
+            <div>
+              <b class="gallery__user">Левон</b>
+              <p class="gallery__text">
+                Вчера он на луну летал, сегодня в руки к нам попал.
+              </p>
+            </div>
+            <button class="gallery__button" type="button"><span class="gallery__like">Нравится: 356</span></button>
+          </article>
+          <article class="gallery__post">
+            <picture>
+              <source srcset="img/photo-drumset-mobile@1x.jpg" media="(max-width: 320px)">
+              <source srcset="img/photo-drumset-tablet@1x.jpg" media="(max-width: 660px)">
+              <source srcset="img/photo-drumset-desktop@1x.jpg" media="(min-width: 1200px)">
+              <img src="img/photo-drumset-desktop@1x.jpg">
+            </picture>
+            <div>
+              <b class="gallery__user">Антон</b>
+              <p class="gallery__text">
+                Соседи будут рады!
+              </p>
+            </div>
+            <button class="gallery__button" type="button"><span class="gallery__like">Нравится: 666</span></button>
+          </article>
+          <article class="gallery__post">
+            <picture>
+              <source srcset="img/photo-window-mobile@1x.jpg" media="(max-width: 320px)">
+              <source srcset="img/photo-window-tablet@1x.jpg" media="(max-width: 660px)">
+              <source srcset="img/photo-window-desktop@1x.jpg" media="(min-width: 1200px)">
+              <img src="img/photo-window-desktop@1x.jpg">
+            </picture>
+            <div>
+              <b class="gallery__user">Борис</b>
+              <p class="gallery__text">
+                Здесь могла быть ваша цитата о высоком и вечном.
+              </p>
+            </div>
+            <button class="gallery__button" type="button"><span class="gallery__like">Нравится: 215</span></button>
+          </article>
+          <article class="gallery__post">
+            <picture>
+              <source srcset="img/photo-fair-mobile@1x.jpg" media="(max-width: 320px)">
+              <source srcset="img/photo-fair-tablet@1x.jpg" media="(max-width: 660px)">
+              <source srcset="img/photo-fair-desktop@1x.jpg" media="(min-width: 1200px)">
+              <img src="img/photo-fair-desktop@1x.jpg">
+            </picture>
+            <div>
+              <b class="gallery__user">Сергей</b>
+              <p class="gallery__text">
+                Самая кубанская в мире!
+              </p>
+            </div>
+            <button class="gallery__button" type="button"><span class="gallery__like">Нравится: 4</span></button>
+          </article>
+          <article class="gallery__post">
+            <picture>
+              <source srcset="img/photo-pov-mobile@1x.jpg" media="(max-width: 320px)">
+              <source srcset="img/photo-pov-tablet@1x.jpg" media="(max-width: 660px)">
+              <source srcset="img/photo-pov-desktop@1x.jpg" media="(min-width: 1200px)">
+              <img src="img/photo-pov-desktop@1x.jpg">
+            </picture>
+            <div>
+              <b class="gallery__user">Максим</b>
+              <p class="gallery__text">
+                Где снег-то?
+              </p>
+            </div>
+            <button class="gallery__button" type="button"><span class="gallery__like">Нравится: 150</span></button>
+          </article>
+          <article class="gallery__post">
+            <picture>
+              <source srcset="img/photo-wing-mobile@1x.jpg" media="(max-width: 320px)">
+              <source srcset="img/photo-wing-tablet@1x.jpg" media="(max-width: 660px)">
+              <source srcset="img/photo-wing-desktop@1x.jpg" media="(min-width: 1200px)">
+              <img src="img/photo-wing-desktop@1x.jpg">
+            </picture>
+            <div>
+              <b class="gallery__user">Надежда</b>
+              <p class="gallery__text">
+                Всем GM и взаимные лайки!
+              </p>
+            </div>
+            <button class="gallery__button" type="button"><span class="gallery__like">Нравится: 2560</span></button>
+          </article>
+        </div>
+        <p class="gallery__lead">
+          Затмите их всех!<br>
+          Выкладывайте все, что накопилось в телефоне!
         </p>
       </section>
       <section class="send">
@@ -170,27 +211,35 @@
       </section>
     </main>
     <footer class="page-footer">
-      <a href="index.html" class="page-footer__logo">
-        <img src="https://via.placeholder.com/150x150">
-      </a>
-      <ul class="page-footer__list">
-        <li class="page-footer__item">
-          <a class="page-footer__link" href="">Twitter</a>
-        </li>
-        <li class="page-footer__item">
-          <a class="page-footer__link" href="">Facebook</a>
-        </li>
-        <li class="page-footer__item">
-          <a class="page-footer__link" href="">Ellipse</a>
-        </li>
-      </ul>
-      <!--
-      <p class="page-footer__text">
-        Разработано
-        <a href="https://htmlacademy.ru/intensive/adaptive">
+      <div  class="page-footer__wrapper container">
+        <a class="page-footer__logo">
+          <img class="page-footer__image" src="img/logo-pink-blue-mobile.svg">
         </a>
-      </p>
-      -->
+        <ul class="page-footer__list">
+          <li class="page-footer__item">
+            <a class="page-footer__link page-footer__link--twitter" href="">
+              <span class="visually-hidden">Twitter</span>
+            </a>
+          </li>
+          <li class="page-footer__item">
+            <a class="page-footer__link page-footer__link--facebook" href="">
+              <span class="visually-hidden">Facebook</span>
+            </a>
+          </li>
+          <li class="page-footer__item">
+            <a class="page-footer__link page-footer__link--youtube" href="">
+              <span class="visually-hidden">Youtube</span>
+            </a>
+          </li>
+        </ul>
+        <div class="page-footer__communication">
+          <p class="page-footer__text">
+            Разработано
+          </p>
+          <a class="page-footer__icon" href="https://htmlacademy.ru/intensive/adaptive">
+          </a>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
